# velocity.report

./: .dockerignore  .gitattributes  .gitignore  .mdformat.toml  .pre-commit-config.yaml  .prettierignore  .prettierrc.yaml  .sql-formatter.json  ARCHITECTURE.md  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CODEBASE_REVIEW.md  CODE_OF_CONDUCT.md  COMMANDS.md  CONTRIBUTING.md  DEBUGGING.md  DESIGN.md  IMPLEMENTATION_GUIDE.md  LAUNCH_BLOCKERS.md  LICENSE  LIDAR_UI_IMPLEMENTATION_PLAN.md  M3.5-IMPLEMENTATION-SUMMARY.md  M3.5-M4-MACOS-IMPLEMENTATION.md  M4-COMPLETION-CHECKLIST.md  M4-IMPLEMENTATION-SUMMARY.md  MAGIC_NUMBERS.md  MIGRATIONS.md  Makefile  P1_SOLUTION_SUMMARY.md  PROPOSAL_USABILITY_IMPROVEMENTS.md  README.md  README_P1_FIX.md  RELOAD_CODE_CHANGES.md  RESTRUCTURE_BEST_PRACTICE.md  SECURITY_AUDIT_REPORT.md  SECURITY_FIX_GUIDE.md  SECURITY_NOTICE.md  SECURITY_SUMMARY.md  TENETS.md  (+36 more)
data/align/: .gitignore  README.md  cctv.py  get_telraam.py  get_unifi.py  pyproject.toml
tools/pdf-generator/: .gitignore  README.md  REQUIRED_FIELDS.md  config.example-home.json  config.example.json  coverage.xml  custom.json  pyproject.toml  report_config_example.json  requirements.txt  test-config.json  test_output.tex  update_imports.py
tools/pdf-generator/docs/: COVERAGE_IMPROVEMENT_SUMMARY.md  CURRENT_STATE.md  GET_STATS_COVERAGE.md  HISTOGRAM_LABEL_UPDATE.md  IMPROVEMENT_PLAN.md  PDF_INTEGRATION_TESTS.md  PHASE_1-9_COMPLETION.md  PHASE_12_COMPLETION.md  PHASE_7_INTEGRATION_TEST_REPORT.md  PHASE_B_COMPLETION.md  PHASE_C_COMPLETION.md  REFACTOR_COMPLETE_SUMMARY.md  REFACTOR_CONFIG_CONSOLIDATION.md  REFACTOR_PHASE3_PROGRESS.md  REFACTOR_PLAN.md  REFACTOR_PRIORITY1_TASK1.md  REFACTOR_PRIORITY2_TASK4.md  REMAINING_TASKS.md  TASK_7_COMPLETION.md  TASK_8_COMPLETION.md  TEST_COVERAGE_ANALYSIS.md  TEST_FIXES_COMPLETE.md
tools/pdf-generator/fonts/: LICENSE.txt
tools/pdf-generator/output/: .gitignore
tools/pdf-generator/pdf_generator/: __init__.py
tools/pdf-generator/pdf_generator/cli/: create_config.py  demo.py  main.py
tools/pdf-generator/pdf_generator/core/: api_client.py  chart_builder.py  chart_saver.py  config_manager.py  (+12 more)
tools/pdf-generator/scripts/: check_latex_package_parity.py  generate_from_config.py
tools/pdf-generator/tex/: dependency-manifest.txt  velocity-report.ini
(+2318 files in other folders)
